[package]
name = "oci-util"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
authors = ["网聚云联边缘计算团队"]
description = "云网关OCI公共库"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
anyhow = "1.0.57"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.15", default-features = false, features = ["rt-multi-thread", "macros"] }
oci-distribution = "0.9.2"
regex = "1.5"
tempfile = "3.3.0"
dirs = "4.0.0"
oci-spec = "0.5.6"
sha256 = "1.0.3"
async-recursion = "1.0.0"
tar = "0.4"
jwalk = "0.6"
seahash = "4.1.0"
chrono = "0.4"
sha2 = "0.10.2"